--- a/public/monop.html
+++ b/public/monop.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Create Monopoly Codes</title>
+        <title>Monopoly Tracker</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
         <script src="monop.js"></script>
         <link rel="stylesheet" type="text/css" href="monop.css"/>
