Added support for prize groups.

--- a/public/monop.html
+++ b/public/monop.html
@@ -48,6 +48,7 @@
                     <tr>
                         <th>Code</th>
                         <th>Count</th>
+                        <th>Prize</th>
                     </tr>
                     <tbody id="status-items">
                     </tbody>
